--- a/src/lib/theme/style.css
+++ b/src/lib/theme/style.css
@@ -1,5 +1,5 @@
 /* Light */
-:root:is(.md, .ios) {
+:root.md3 {
 	--ion-color-primary: rgb(var(--md3-light-primary));
 	--ion-color-primary-rgb: var(--md3-light-primary);
 	--ion-color-primary-contrast: rgb(var(--md3-light-on-primary));
@@ -115,8 +115,18 @@
 	--ion-background-color-step-950: rgb(var(--md3-shade-5));
 }
 
+:root.md3.ios {
+	--ion-background-color: rgb(var(--md3-shade-95));
+	--ion-background-color-rgb: var(--md3-shade-95);
+
+	--ion-item-background: rgb(var(--md3-shade-99));
+	--ion-toolbar-background: rgb(var(--md3-shade-99));
+	--ion-tab-bar-background: rgb(var(--md3-shade-99));
+	--ion-card-background: rgb(var(--md3-shade-99));
+}
+
 /* Dark */
-.ion-palette-dark:is(.md, .ios) {
+:root.md3.ion-palette-dark {
 	--ion-color-primary: rgb(var(--md3-dark-primary));
 	--ion-color-primary-rgb: var(--md3-dark-primary);
 	--ion-color-primary-contrast: rgb(var(--md3-dark-on-primary));
@@ -232,6 +242,6 @@
 	--ion-background-color-step-950: rgb(var(--md3-shade-95));
 }
 
-.ion-palette-dark.ios {
+:root.md3.ion-palette-dark.ios {
 	--ion-item-background: rgb(var(--md3-shade-12));
 }
