--- a/src/styles/override.css
+++ b/src/styles/override.css
@@ -1,3 +1,4 @@
+
 ion-list-header + ion-list.md {
 	padding-top: unset;
 }
@@ -12,8 +13,37 @@ ion-list.md {
 
 .centered-text {
 	text-align: center;
+	padding: 1em;
 }
 
 p {
 	text-wrap: wrap;
+}
+
+/* Segment Buttons */
+
+ion-segment-button.md::part(native) {
+	border: 1px solid var(--color);
+	text-transform: none;
+	letter-spacing: normal;
+	font-size: unset;
+}
+
+ion-segment-button.md.segment-button-checked::part(native) {
+	background-color: rgba(var(--ion-color-primary-rgb), 0.2);
+	color: var(--ion-text-color);
+}
+
+ion-segment-button.md:first-child::part(native) {
+	border-right: 0;
+	border-radius: 48px 0 0 48px;
+}
+
+ion-segment-button.md:last-child::part(native) {
+	border-left: 0;
+	border-radius: 0 48px 48px 0;
+}
+
+ion-segment-button.md::part(indicator-background) {
+	height: 0px;
 }
