--- a/src/styles/override.css
+++ b/src/styles/override.css
@@ -19,6 +19,11 @@ p {
 	text-wrap: wrap;
 }
 
+.m3 ion-header.md{
+	box-shadow: unset;
+	-webkit-box-shadow: unset;
+}
+
 /* Segment Buttons */
 .md3 ion-segment-button.md::part(native) {
 	border: 1px solid var(--color);
