--- a/src/styles/override.css
+++ b/src/styles/override.css
@@ -58,8 +58,6 @@ p {
 }
 
 
-
-
 /* Toggles */
 .md3 ion-toggle.md::part(track) {
 	background-color: var(--ion-toolbar-background);
@@ -107,7 +105,7 @@ p {
 	background-color: var(--ion-color-primary);
 	height: 64px;
 	width: 6px;
-	border-radius: 24npx;
+	border-radius: 64px;
 	border: 12px solid var(--ion-background-color);
 	transform: translateY(-24px);
 }
