--- a/src/lib/theme/components.css
+++ b/src/lib/theme/components.css
@@ -201,3 +201,9 @@
 .md.md3 ion-modal::part(handle) {
 	top: 16px;
 }
+
+/* Search bar - this one is done "at eye" please review */
+.md.md3 ion-searchbar {
+	--border-radius: 32px;
+	--box-shadow: unset;
+}
