--- a/src/lib/theme/style.css
+++ b/src/lib/theme/style.css
@@ -1,283 +1,16 @@
-@import url(components.css);
+@import url(color.css);
 
-/* Light */
-.md3 * {
-	--ion-color-primary: rgb(var(--md3-light-primary));
-	--ion-color-primary-rgb: var(--md3-light-primary);
-	--ion-color-primary-contrast: rgb(var(--md3-light-on-primary));
-	--ion-color-primary-contrast-rgb: var(--md3-light-on-primary);
-	--ion-color-primary-shade: rgb(var(--md3-light-primary-fixed-dim));
-	--ion-color-primary-tint: rgb(var(--md3-light-primary-fixed));
+@import url(components/button.css);
+@import url(components/cards.css);
+@import url(components/fab.css);
+@import url(components/headerbar.css);
+@import url(components/list.css);
+@import url(components/modal.css);
+@import url(components/range.css);
+@import url(components/searchbar.css);
+@import url(components/segment.css);
+@import url(components/tabs.css);
+@import url(components/toggle.css);
 
-	--ion-color-secondary: rgb(var(--md3-light-secondary));
-	--ion-color-secondary-rgb: var(--md3-light-secondary);
-	--ion-color-secondary-contrast: rgb(var(--md3-light-on-secondary));
-	--ion-color-secondary-contrast-rgb: var(--md3-light-on-secondary);
-	--ion-color-secondary-shade: rgb(var(--md3-light-secondary-fixed-dim));
-	--ion-color-secondary-tint: rgb(var(--md3-light-secondary-fixed));
-
-	--ion-color-tertiary: rgb(var(--md3-light-tertiary));
-	--ion-color-tertiary-rgb: var(--md3-light-tertiary);
-	--ion-color-tertiary-contrast: rgb(var(--md3-light-on-tertiary));
-	--ion-color-tertiary-contrast-rgb: var(--md3-light-on-tertiary);
-	--ion-color-tertiary-shade: rgb(var(--md3-light-tertiary-fixed-dim));
-	--ion-color-tertiary-tint: rgb(var(--md3-light-tertiary-fixed));
-
-	--ion-color-success: rgb(var(--md3-light-tertiary));
-	--ion-color-success-rgb: var(--md3-light-tertiary);
-	--ion-color-success-contrast: rgb(var(--md3-light-on-tertiary));
-	--ion-color-success-contrast-rgb: var(--md3-light-on-tertiary);
-	--ion-color-success-shade: rgb(var(--md3-light-tertiary-fixed-dim));
-	--ion-color-success-tint: rgb(var(--md3-light-tertiary-fixed));
-
-	--ion-color-warning: rgb(var(--md3-light-secondary));
-	--ion-color-warning-rgb: var(--md3-light-secondary);
-	--ion-color-warning-contrast: rgb(var(--md3-light-on-secondary));
-	--ion-color-warning-contrast-rgb: var(--md3-light-on-secondary);
-	--ion-color-warning-shade: rgb(var(--md3-light-secondary-fixed-dim));
-	--ion-color-warning-tint: rgb(var(--md3-light-secondary-fixed));
-
-	--ion-color-danger: rgb(var(--md3-light-error-container));
-	--ion-color-danger-rgb: var(--md3-light-error-container);
-	--ion-color-danger-contrast: rgb(var(--md3-light-on-error-container));
-	--ion-color-danger-contrast-rgb: var(--md3-light-on-error-container);
-	--ion-color-danger-shade: rgb(var(--md3-light-error-container));
-	--ion-color-danger-tint: rgb(var(--md3-light-error-container));
-
-	--ion-color-light: rgb(var(--md3-neutral-palette-tone-90));
-	--ion-color-light-rgb: var(--md3-neutral-palette-tone-90);
-	--ion-color-light-contrast: rgb(var(--md3-neutral-palette-tone-10));
-	--ion-color-light-contrast-rgb: var(--md3-neutral-palette-tone-10);
-	--ion-color-light-shade: rgb(var(--md3-neutral-palette-tone-90));
-	--ion-color-light-tint: rgb(var(--md3-neutral-palette-tone-90));
-
-	--ion-color-medium: rgb(var(--md3-neutral-palette-tone-70));
-	--ion-color-medium-rgb: rgb(var(--md3-neutral-palette-tone-70));
-	--ion-color-medium-contrast: rgb(var(--md3-neutral-palette-tone-30));
-	--ion-color-medium-contrast-rgb: var(--md3-neutral-palette-tone-30);
-	--ion-color-medium-shade: rgb(var(--md3-neutral-palette-tone-70));
-	--ion-color-medium-tint: rgb(var(--md3-neutral-palette-tone-70));
-
-	--ion-color-dark: rgb(var(--md3-neutral-palette-tone-10));
-	--ion-color-dark-rgb: var(--md3-neutral-palette-tone-10);
-	--ion-color-dark-contrast: rgb(var(--md3-neutral-palette-tone-90));
-	--ion-color-dark-contrast-rgb: var(--md3-neutral-palette-tone-90);
-	--ion-color-dark-shade: rgb(var(--md3-neutral-palette-tone-10));
-	--ion-color-dark-tint: rgb(var(--md3-neutral-palette-tone-10));
-
-	--ion-background-color: rgb(var(--md3-light-background));
-	--ion-background-color-rgb: var(--md3-light-background);
-
-	--ion-text-color: rgb(var(--md3-light-on-background));
-	--ion-text-color-rgb: var(--md3-light-on-background);
-
-	--ion-item-background: rgb(var(--md3-light-background));
-	--ion-toolbar-background: rgb(var(--md3-light-surface-container));
-	--ion-tab-bar-background: rgb(var(--md3-light-surface-container));
-	--ion-card-background: rgb(var(--md3-light-surface-container));
-
-	--ion-text-color-step-50: rgb(var(--md3-neutral-palette-tone-5));
-	--ion-text-color-step-100: rgb(var(--md3-neutral-palette-tone-10));
-	--ion-text-color-step-150: rgb(var(--md3-neutral-palette-tone-15));
-	--ion-text-color-step-200: rgb(var(--md3-neutral-palette-tone-20));
-	--ion-text-color-step-250: rgb(var(--md3-neutral-palette-tone-25));
-	--ion-text-color-step-300: rgb(var(--md3-neutral-palette-tone-30));
-	--ion-text-color-step-350: rgb(var(--md3-neutral-palette-tone-35));
-	--ion-text-color-step-400: rgb(var(--md3-neutral-palette-tone-40));
-	--ion-text-color-step-450: rgb(var(--md3-neutral-palette-tone-45));
-	--ion-text-color-step-500: rgb(var(--md3-neutral-palette-tone-50));
-	--ion-text-color-step-550: rgb(var(--md3-neutral-palette-tone-55));
-	--ion-text-color-step-600: rgb(var(--md3-neutral-palette-tone-60));
-	--ion-text-color-step-650: rgb(var(--md3-neutral-palette-tone-65));
-	--ion-text-color-step-700: rgb(var(--md3-neutral-palette-tone-70));
-	--ion-text-color-step-750: rgb(var(--md3-neutral-palette-tone-75));
-	--ion-text-color-step-800: rgb(var(--md3-neutral-palette-tone-80));
-	--ion-text-color-step-850: rgb(var(--md3-neutral-palette-tone-85));
-	--ion-text-color-step-900: rgb(var(--md3-neutral-palette-tone-90));
-	--ion-text-color-step-950: rgb(var(--md3-neutral-palette-tone-95));
-
-	--ion-background-color-step-50: rgb(var(--md3-neutral-palette-tone-95));
-	--ion-background-color-step-100: rgb(var(--md3-neutral-palette-tone-90));
-	--ion-background-color-step-150: rgb(var(--md3-neutral-palette-tone-85));
-	--ion-background-color-step-200: rgb(var(--md3-neutral-palette-tone-80));
-	--ion-background-color-step-250: rgb(var(--md3-neutral-palette-tone-75));
-	--ion-background-color-step-300: rgb(var(--md3-neutral-palette-tone-70));
-	--ion-background-color-step-350: rgb(var(--md3-neutral-palette-tone-65));
-	--ion-background-color-step-400: rgb(var(--md3-neutral-palette-tone-60));
-	--ion-background-color-step-450: rgb(var(--md3-neutral-palette-tone-55));
-	--ion-background-color-step-500: rgb(var(--md3-neutral-palette-tone-50));
-	--ion-background-color-step-550: rgb(var(--md3-neutral-palette-tone-45));
-	--ion-background-color-step-600: rgb(var(--md3-neutral-palette-tone-40));
-	--ion-background-color-step-650: rgb(var(--md3-neutral-palette-tone-35));
-	--ion-background-color-step-700: rgb(var(--md3-neutral-palette-tone-30));
-	--ion-background-color-step-750: rgb(var(--md3-neutral-palette-tone-25));
-	--ion-background-color-step-800: rgb(var(--md3-neutral-palette-tone-20));
-	--ion-background-color-step-850: rgb(var(--md3-neutral-palette-tone-15));
-	--ion-background-color-step-900: rgb(var(--md3-neutral-palette-tone-10));
-	--ion-background-color-step-950: rgb(var(--md3-neutral-palette-tone-5));
-}
-
-.ios.md3 * {
-	--ion-background-color: rgb(var(--md3-neutral-palette-tone-95));
-	--ion-background-color-rgb: var(--md3-neutral-palette-tone-95);
-
-	--ion-item-background: rgb(var(--md3-neutral-palette-tone-99));
-	--ion-toolbar-background: rgb(var(--md3-neutral-palette-tone-99));
-	--ion-tab-bar-background: rgb(var(--md3-neutral-palette-tone-99));
-	--ion-card-background: rgb(var(--md3-neutral-palette-tone-99));
-}
-
-/* Dark */
-.ion-palette-dark.md3 * {
-	--ion-color-primary: rgb(var(--md3-dark-primary));
-	--ion-color-primary-rgb: var(--md3-dark-primary);
-	--ion-color-primary-contrast: rgb(var(--md3-dark-on-primary));
-	--ion-color-primary-contrast-rgb: var(--md3-dark-on-primary);
-	--ion-color-primary-shade: rgb(var(--md3-dark-primary-fixed-dim));
-	--ion-color-primary-tint: rgb(var(--md3-dark-primary-fixed));
-
-	--ion-color-secondary: rgb(var(--md3-dark-secondary));
-	--ion-color-secondary-rgb: var(--md3-dark-secondary);
-	--ion-color-secondary-contrast: rgb(var(--md3-dark-on-secondary));
-	--ion-color-secondary-contrast-rgb: var(--md3-dark-on-secondary);
-	--ion-color-secondary-shade: rgb(var(--md3-dark-secondary-fixed-dim));
-	--ion-color-secondary-tint: rgb(var(--md3-dark-secondary-fixed));
-
-	--ion-color-tertiary: rgb(var(--md3-dark-tertiary));
-	--ion-color-tertiary-rgb: var(--md3-dark-tertiary);
-	--ion-color-tertiary-contrast: rgb(var(--md3-dark-on-tertiary));
-	--ion-color-tertiary-contrast-rgb: var(--md3-dark-on-tertiary);
-	--ion-color-tertiary-shade: rgb(var(--md3-dark-tertiary-fixed-dim));
-	--ion-color-tertiary-tint: rgb(var(--md3-dark-tertiary-fixed));
-
-	--ion-color-success: rgb(var(--md3-dark-tertiary));
-	--ion-color-success-rgb: var(--md3-dark-tertiary);
-	--ion-color-success-contrast: rgb(var(--md3-dark-on-tertiary));
-	--ion-color-success-contrast-rgb: var(--md3-dark-on-tertiary);
-	--ion-color-success-shade: rgb(var(--md3-dark-tertiary-fixed-dim));
-	--ion-color-success-tint: rgb(var(--md3-dark-tertiary-fixed));
-
-	--ion-color-warning: rgb(var(--md3-dark-secondary));
-	--ion-color-warning-rgb: var(--md3-dark-secondary);
-	--ion-color-warning-contrast: rgb(var(--md3-dark-on-secondary));
-	--ion-color-warning-contrast-rgb: var(--md3-dark-on-secondary);
-	--ion-color-warning-shade: rgb(var(--md3-dark-secondary-fixed-dim));
-	--ion-color-warning-tint: rgb(var(--md3-dark-secondary-fixed));
-
-	--ion-color-danger: rgb(var(--md3-dark-error-container));
-	--ion-color-danger-rgb: var(--md3-dark-error-container);
-	--ion-color-danger-contrast: rgb(var(--md3-dark-on-error-container));
-	--ion-color-danger-contrast-rgb: var(--md3-dark-on-error-container);
-	--ion-color-danger-shade: rgb(var(--md3-dark-error-container));
-	--ion-color-danger-tint: rgb(var(--md3-dark-error-container));
-
-	--ion-color-light: rgb(var(--md3-neutral-palette-tone-10));
-	--ion-color-light-rgb: var(--md3-neutral-palette-tone-10);
-	--ion-color-light-contrast: rgb(var(--md3-neutral-palette-tone-90));
-	--ion-color-light-contrast-rgb: var(--md3-neutral-palette-tone-90);
-	--ion-color-light-shade: rgb(var(--md3-neutral-palette-tone-10));
-	--ion-color-light-tint: rgb(var(--md3-neutral-palette-tone-10));
-
-	--ion-color-medium: rgb(var(--md3-neutral-palette-tone-70));
-	--ion-color-medium-rgb: rgb(var(--md3-neutral-palette-tone-70));
-	--ion-color-medium-contrast: rgb(var(--md3-neutral-palette-tone-30));
-	--ion-color-medium-contrast-rgb: var(--md3-neutral-palette-tone-30);
-	--ion-color-medium-shade: rgb(var(--md3-neutral-palette-tone-70));
-	--ion-color-medium-tint: rgb(var(--md3-neutral-palette-tone-70));
-
-	--ion-color-dark: rgb(var(--md3-neutral-palette-tone-90));
-	--ion-color-dark-rgb: var(--md3-neutral-palette-tone-90);
-	--ion-color-dark-contrast: rgb(var(--md3-neutral-palette-tone-10));
-	--ion-color-dark-contrast-rgb: var(--md3-neutral-palette-tone-10);
-	--ion-color-dark-shade: rgb(var(--md3-neutral-palette-tone-90));
-	--ion-color-dark-tint: rgb(var(--md3-neutral-palette-tone-90));
-
-	--ion-background-color: rgb(var(--md3-dark-background));
-	--ion-background-color-rgb: var(--md3-dark-background);
-
-	--ion-text-color: rgb(var(--md3-dark-on-background));
-	--ion-text-color-rgb: var(--md3-dark-on-background);
-
-	--ion-item-background: rgb(var(--md3-dark-background));
-	--ion-toolbar-background: rgb(var(--md3-dark-surface-container));
-	--ion-tab-bar-background: rgb(var(--md3-dark-surface-container));
-	--ion-card-background: rgb(var(--md3-dark-surface-container));
-
-	--ion-text-color-step-50: rgb(var(--md3-neutral-palette-tone-95));
-	--ion-text-color-step-100: rgb(var(--md3-neutral-palette-tone-90));
-	--ion-text-color-step-150: rgb(var(--md3-neutral-palette-tone-85));
-	--ion-text-color-step-200: rgb(var(--md3-neutral-palette-tone-80));
-	--ion-text-color-step-250: rgb(var(--md3-neutral-palette-tone-75));
-	--ion-text-color-step-300: rgb(var(--md3-neutral-palette-tone-70));
-	--ion-text-color-step-350: rgb(var(--md3-neutral-palette-tone-65));
-	--ion-text-color-step-400: rgb(var(--md3-neutral-palette-tone-60));
-	--ion-text-color-step-450: rgb(var(--md3-neutral-palette-tone-55));
-	--ion-text-color-step-500: rgb(var(--md3-neutral-palette-tone-50));
-	--ion-text-color-step-550: rgb(var(--md3-neutral-palette-tone-45));
-	--ion-text-color-step-600: rgb(var(--md3-neutral-palette-tone-40));
-	--ion-text-color-step-650: rgb(var(--md3-neutral-palette-tone-35));
-	--ion-text-color-step-700: rgb(var(--md3-neutral-palette-tone-30));
-	--ion-text-color-step-750: rgb(var(--md3-neutral-palette-tone-25));
-	--ion-text-color-step-800: rgb(var(--md3-neutral-palette-tone-20));
-	--ion-text-color-step-850: rgb(var(--md3-neutral-palette-tone-15));
-	--ion-text-color-step-900: rgb(var(--md3-neutral-palette-tone-10));
-	--ion-text-color-step-950: rgb(var(--md3-neutral-palette-tone-5));
-
-	--ion-background-color-step-50: rgb(var(--md3-neutral-palette-tone-5));
-	--ion-background-color-step-100: rgb(var(--md3-neutral-palette-tone-10));
-	--ion-background-color-step-150: rgb(var(--md3-neutral-palette-tone-15));
-	--ion-background-color-step-200: rgb(var(--md3-neutral-palette-tone-20));
-	--ion-background-color-step-250: rgb(var(--md3-neutral-palette-tone-25));
-	--ion-background-color-step-300: rgb(var(--md3-neutral-palette-tone-30));
-	--ion-background-color-step-350: rgb(var(--md3-neutral-palette-tone-35));
-	--ion-background-color-step-400: rgb(var(--md3-neutral-palette-tone-40));
-	--ion-background-color-step-450: rgb(var(--md3-neutral-palette-tone-45));
-	--ion-background-color-step-500: rgb(var(--md3-neutral-palette-tone-50));
-	--ion-background-color-step-550: rgb(var(--md3-neutral-palette-tone-55));
-	--ion-background-color-step-600: rgb(var(--md3-neutral-palette-tone-60));
-	--ion-background-color-step-650: rgb(var(--md3-neutral-palette-tone-65));
-	--ion-background-color-step-700: rgb(var(--md3-neutral-palette-tone-70));
-	--ion-background-color-step-750: rgb(var(--md3-neutral-palette-tone-75));
-	--ion-background-color-step-800: rgb(var(--md3-neutral-palette-tone-80));
-	--ion-background-color-step-850: rgb(var(--md3-neutral-palette-tone-85));
-	--ion-background-color-step-900: rgb(var(--md3-neutral-palette-tone-90));
-	--ion-background-color-step-950: rgb(var(--md3-neutral-palette-tone-95));
-}
-
-.ion-palette-dark.ios.md3 * {
-	--ion-item-background: rgb(var(--md3-neutral-palette-tone-12));
-}
-
-/* Corners */
-.md3 * {
-	--md3-corner-none: 0;
-	--md3-corner-extra-small: 4px;
-	--md3-corner-extra-small-top: 4px 4px 0 0;
-	--md3-corner-small: 8px;
-	--md3-corner-large: 16px;
-	--md3-corner-medium: 12px;
-	--md3-corner-large-end: 0 16px 16px 0;
-	--md3-corner-large-top: 16px 16px 0 0;
-	--md3-corner-extra-large: 28px;
-	--md3-corner-extra-large-top: 28px 28px 0 0;
-	--md3-corner-full: 1024px;
-}
-
-/* Elevation */
-.md3 * {
-	--md3-elevation-0: 0px 0px 0px 0px rgb(var(--md3-light-shadow) / 0.2), 0px 0px 0px 0px rgb(var(--md3-light-shadow) / 0.14), 0px 0px 0px 0px rgb(var(--md3-light-shadow) / 0.12);
-	--md3-elevation-1: 0px 3px 1px -2px rgb(var(--md3-light-shadow) / 0.2), 0px 2px 2px 0px rgb(var(--md3-light-shadow) / 0.14), 0px 1px 5px 0px rgb(var(--md3-light-shadow) / 0.12);
-	--md3-elevation-2: 0px 2px 4px -1px rgb(var(--md3-light-shadow) / 0.2), 0px 4px 5px 0px rgb(var(--md3-light-shadow) / 0.14), 0px 1px 10px 0px rgb(var(--md3-light-shadow) / 0.12);
-	--md3-elevation-3: 0px 5px 5px -3px rgb(var(--md3-light-shadow) / 0.2), 0px 8px 10px 1px rgb(var(--md3-light-shadow) / 0.14), 0px 3px 14px 2px rgb(var(--md3-light-shadow) / 0.12);
-	--md3-elevation-4: 0px 5px 5px -3px rgb(var(--md3-light-shadow) / 0.2), 0px 8px 10px 1px rgb(var(--md3-light-shadow) / 0.14), 0px 3px 14px 2px rgb(var(--md3-light-shadow) / 0.12);
-	--md3-elevation-5: 0px 8px 10px -6px rgb(var(--md3-light-shadow) / 0.2), 0px 16px 24px 2px rgb(var(--md3-light-shadow) / 0.14), 0px 6px 30px 5px rgb(var(--md3-light-shadow) / 0.12);
-}
-
-.ion-palette-dark.md3 * {
-	--md3-elevation-0: 0px 0px 0px 0px rgb(var(--md3-dark-shadow) / 0.2), 0px 0px 0px 0px rgb(var(--md3-dark-shadow) / 0.14), 0px 0px 0px 0px rgb(var(--md3-dark-shadow) / 0.12);
-	--md3-elevation-1: 0px 3px 1px -2px rgb(var(--md3-dark-shadow) / 0.2), 0px 2px 2px 0px rgb(var(--md3-dark-shadow) / 0.14), 0px 1px 5px 0px rgb(var(--md3-dark-shadow) / 0.12);
-	--md3-elevation-2: 0px 2px 4px -1px rgb(var(--md3-dark-shadow) / 0.2), 0px 4px 5px 0px rgb(var(--md3-dark-shadow) / 0.14), 0px 1px 10px 0px rgb(var(--md3-dark-shadow) / 0.12);
-	--md3-elevation-3: 0px 5px 5px -3px rgb(var(--md3-dark-shadow) / 0.2), 0px 8px 10px 1px rgb(var(--md3-dark-shadow) / 0.14), 0px 3px 14px 2px rgb(var(--md3-dark-shadow) / 0.12);
-	--md3-elevation-4: 0px 5px 5px -3px rgb(var(--md3-dark-shadow) / 0.2), 0px 8px 10px 1px rgb(var(--md3-dark-shadow) / 0.14), 0px 3px 14px 2px rgb(var(--md3-dark-shadow) / 0.12);
-	--md3-elevation-5: 0px 8px 10px -6px rgb(var(--md3-dark-shadow) / 0.2), 0px 16px 24px 2px rgb(var(--md3-dark-shadow) / 0.14), 0px 6px 30px 5px rgb(var(--md3-dark-shadow) / 0.12);
-}
+@import url(ionic.css);
+@import url(utils.css);
