--- a/src/lib/theme/components/list.css
+++ b/src/lib/theme/components/list.css
@@ -7,3 +7,11 @@
 .md.md3 ion-list ion-item ion-icon[slot="start"] {
 	margin-inline-end: 24px;
 }
+
+.md.md3 ion-item {
+	--inner-border-width: 0 0 0 0;
+}
+
+.md.md3 ion-item[lines="lines"] {
+	--inner-border-width: unset;
+}
