--- a/src/lib/theme/style.css
+++ b/src/lib/theme/style.css
@@ -4,6 +4,7 @@
 @import url(components/cards.css);
 @import url(components/fab.css);
 @import url(components/headerbar.css);
+@import url(components/item.css);
 @import url(components/list.css);
 @import url(components/modal.css);
 @import url(components/range.css);
