--- a/src/lib/theme/components/item.css
+++ b/src/lib/theme/components/item.css
@@ -1,16 +1,19 @@
 .md.md3 ion-item {
 	--min-height: 56px;
-	--inner-padding-start: 16px;
-	--inner-padding-end: 16px;
 	--inner-padding-top: 8px;
 	--inner-padding-bottom: 8px;
 	--inner-border-width: 0 0 0 0;
+
+	--padding-start: 16px;
+	--padding-end: 16px;
 }
 
-.md.md3 ion-item [slot="start"],
+.md.md3 ion-item [slot="start"] {
+	margin-inline-end: 16px;
+}
+
 .md.md3 ion-item [slot="end"] {
-	margin-inline-start: 0;
-	margin-inline-end: 0;
+	margin-inline-start: 16px;
 }
 
 .md.md3 ion-item[lines="lines"] {
