fix searchbar css

--- a/src/lib/theme/components/searchbar.css
+++ b/src/lib/theme/components/searchbar.css
@@ -1,5 +1,5 @@
 /* Search bar - this one is done "at eye" please review */
 .md.md3 ion-searchbar {
 	--border-radius: 32px;
-	--box-shadow: unset;
+	--box-shadow: none;
 }
